@@ -282,10 +282,6 @@ img {
 	margin-right: 0;
 }
 
-.codetable .linenos {
-	padding-right: 10px;
-}
-
 .sr-only {
 	position: absolute;
 	width: 1px;
