@@ -30,6 +30,7 @@
 import io
 import os
 
+from nikola.packages.pygments_better_html import BetterHtmlFormatter
 from nikola.plugin_categories import Task
 from nikola import utils
 
@@ -52,9 +53,14 @@ class CopyAssets(Task):
             "output_folder": self.site.config['OUTPUT_FOLDER'],
             "filters": self.site.config['FILTERS'],
             "code_color_scheme": self.site.config['CODE_COLOR_SCHEME'],
-            "code.css_selectors": ['pre.code', '.highlight pre'],
+            "code.css_selectors": ['pre.code', '.code .codetable', '.highlight pre'],
+            "code.css_wrappers": ['.highlight', '.code'],
             "code.css_head": '/* code.css file generated by Nikola */\n',
-            "code.css_close": "\ntable.codetable { width: 100%;} td.linenos {text-align: right; width: 4em;}\n",
+            "code.css_close": (
+                "\ntable.codetable, table.highlighttable { width: 100%;}\n"
+                ".codetable td.linenos, td.linenos { text-align: right; width: 3.5em; "
+                "padding-right: 0.5em; background: rgba(127, 127, 127, 0.2) }\n"
+                ".codetable td.code, td.code { padding-left: 0.5em; }\n"),
         }
         tasks = {}
         code_css_path = os.path.join(kw['output_folder'], 'assets', 'css', 'code.css')
@@ -90,12 +96,12 @@ class CopyAssets(Task):
         # Check whether or not there is a code.css file around.
         if not code_css_input and kw['code_color_scheme']:
             def create_code_css():
-                from pygments.formatters import get_formatter_by_name
-                formatter = get_formatter_by_name('html', style=kw["code_color_scheme"])
+                formatter = BetterHtmlFormatter(style=kw["code_color_scheme"])
                 utils.makedirs(os.path.dirname(code_css_path))
                 with io.open(code_css_path, 'w+', encoding='utf8') as outf:
                     outf.write(kw["code.css_head"])
-                    outf.write(formatter.get_style_defs(kw["code.css_selectors"]))
+                    outf.write(formatter.get_style_defs(
+                        kw["code.css_selectors"], kw["code.css_wrappers"]))
                     outf.write(kw["code.css_close"])
 
             if os.path.exists(code_css_path):
