@@ -4,6 +4,8 @@ New in master
 Features
 --------
 
+* Change the listings formatting to support word wrap with line
+  numbers and improve appearance
 * Put the current language’s feed links first so that feed readers
   prefer it (Issue #3248)
 
